# unicode

./: CMakeLists.txt  CodepointToUtf8.c
res/: kurdish.txt  ruski.txt
scripts/: compare.sh  roundtrip.sh
src/: codepointToUtf8.c  common.c  common.h  punyToUtf8.c  utf8ToCodepoint.c  utf8ToPuny.c
